# qdrant-setup

./: .env  .env.example  .gitignore  .mcp.json  docker-compose.yml  pyproject.toml
.claude/: settings.json
config/: qdrant_config.yaml
docs/superpowers/plans/: 2026-04-22-contextualizer-prompt-caching-and-chunk-id-fix.md  2026-04-23-rag-mcp-v2.md
files/: shop-context-refactor.md  vault-context-refactor.md
scripts/: init_collections.py  test_embed.py
storage/: raft_state.json
storage/collections/documents/: config.json
storage/collections/documents/0/: newest_clocks.json  replica_state.json
storage/collections/documents/0/segments/a693b4c4-4224-4ac3-a0f3-3a2db356d5c0/vector_storage/vectors/: config.json
vault_qdrant/: __init__.py  __main__.py  chunker.py  cli.py  collection.py  contextualizer.py  embedder.py  mcp_server.py  scanner.py  upserter.py
vault_qdrant/tests/: __init__.py  test_chunker.py  test_cli_contextualizer.py  test_contextualizer.py  test_embedder.py  test_integration.py  test_mcp_server.py  test_scanner.py  test_upserter.py
